assets/css/styles.scss
---
---
@import 'normalize';

$iPadMiniPortrait: 768px;
$iPadMiniLandscape: 1024px;
$Desktop: 1201px;
$gutter: 20px;

a {
  color: #E34234;
  text-decoration: none;
  transition: color 1.5;

  &:hover {
    color: #000;
    transition: color 1.5;
  }
}

h1,
h2,
h3,
.text-bold {
  font-family: 'Kabel Bd', sans-serif;
  font-weight: 400;
}

a,
h4,
h5,
h6,
p,
td,
input,
textarea,
button {
  font-family: 'Kabel Bk BT', sans-serif;
  font-weight: 400;
}

h1,
.text-xxl {
  font-size: 24px;

  @media only screen and (min-width: $iPadMiniPortrait) {
    font-size: 48px;
  }
}

h2 {
  font-size: 24px;

  @media only screen and (min-width: $iPadMiniPortrait) {
    font-size: 48x;
  }
}

h3 {
  font-size: 24px;
}

h4 {
  font-size: 20px;
}

a,
h5,
h6,
p,
td,
input,
textarea {
  font-size: 16px;
}

input,
textarea {
  background-color: #000;
  color: #FFF;
  padding: 12px;
  border: 0;
  margin: 12px 0;
  display: block;
}

textarea {
  vertical-align: bottom;
}

button,
.button {
  background-color: #000;
  color: #FFF;
  text-decoration: none;
  padding: 12px;
  border: none;
  border-radius: 12px;

  &:hover {
    background-color: #FFF;
    color: #000;
  }
}

.text-white {
  color: #FFF;
}

.text-center {
  text-align: center;
}

.text-uppercase {
  text-transform: uppercase;
}

.gradient {
  width: 100vw;
  height: 100vh;
  background: linear-gradient(180deg, rgba(217, 217, 217, 0) 0%, rgba(255, 255, 255, 1) 100%);
  position: absolute;
}

.grid {
  width: calc(100vw - 24px);
  margin: 0 auto;

  @media only screen and (min-width: $iPadMiniPortrait) {
    width: calc(100vw - 40px);
  }

  @media only screen and (min-width: $Desktop) {
    width: 1120px;
  }
}

#home {
  width: 100vw;
  overflow-x: hidden;
}

#magnifying-glass {
  width: calc(100vw - 24px);
  height: 100vh;
  padding: 0 12px;
  position: absolute;
  right: 50%;
  overflow-x: hidden;
  transform: translateX(50%);

  @media only screen and (min-width: $iPadMiniPortrait) {
    width: calc(100vw - 40px);
    padding: 0 20px;
  }

  @media only screen and (min-width: $iPadMiniLandscape) {
    width: 1120px;
    margin: 0 auto;
  }

  svg {
    width: 407px;
    height: auto;
    margin-top: 116px;
    position: absolute;
    right: 35%;
    transform: translateX(50%);

    @media only screen and (min-width: $iPadMiniPortrait) {
      width: calc(100% - 40px);
      right: 36%;
    }

    @media only screen and (min-width: $iPadMiniLandscape) {
      width: 645px;
      margin-top: 24px;
      right: 43%;
    }
  }
}

#home article > header,
#home article > section,
#home article > footer {
  width: 100%;
  height: 100vh;
  position: relative;
}

#home article > header .grid {
  position: absolute;
  top: 170px;
  right: 50%;
  transform: translateX(50%);

  @media only screen and (min-width: $iPadMiniPortrait) {
    top: 240px;
  }

  @media only screen and (min-width: $iPadMiniLandscape) {
    top: 112px;
  }
}

#home article > header h1,
#home article > header h4 {
  width: calc(((100% / 6) - #{$gutter} + (#{$gutter} / 6) * 2) * 2 + #{$gutter});
  margin: 0 auto;

  @media only screen and (min-width: $iPadMiniPortrait) {
    width: calc(((100% - #{$gutter}) / 12) * 4 + #{$gutter} * 3);
  }

  @media only screen and (min-width: $iPadMiniLandscape) {
    width: calc(((100% - #{$gutter}) / 12) * 2 + #{$gutter})
  }
}

#home article > section {
  overflow: hidden;

  img,
  video {
    position: absolute;
    z-index: 0;
  }

  .text-xxl {
    width: 100%;
    text-align: center;
    position: absolute;
    top: calc(100vh * (2 / 3));
    right: 50%;
    transform: translateX(50%);
    z-index: 1;
  }

  .button {
    position: absolute;
    top: calc(100vh * (2 / 3));
    right: 50%;
    transform: translate(50%, 52px);

    @media only screen and (min-width: $iPadMiniPortrait) {
      transform: translate(50%, 96px);
    }
  }
}

#home article > #section-2 h2,
#home article > #section-3 h2,
#home article > #section-4 h2,
#home article > #section-5 h2 {
  width: calc(100vw - 24px);
  margin: 0 auto;
  position: relative;
  z-index: 1;

  @media only screen and (min-width: $iPadMiniPortrait) {
    width: calc(((100% - #{$gutter} * 11) / 12) * 8);
  }

  @media only screen and (min-width: $Desktop) {
    width: calc(((100% - #{$gutter} * 11) / 12) * 6);
  }
}

#home article > #section-2 {
  #blood {
    width: 474.66px;
    height: auto;
    position: absolute;
    top: 50%;
    right: 50%;
    transform: translate(45%, -47%);

    @media only screen and (min-width: $iPadMiniPortrait) {
      width: 696px;
    }

    @media only screen and (min-width: $iPadMiniLandscape) {
      width: 867.71px;
    }
  }

  h2 {
    width: calc(((100% - (#{$gutter} * 5)) * (4 / 6) + #{$gutter} * 3));
    position: absolute;
    top: 50%;
    right: 50%;
    transform: translate(50%, -50%);

    @media only screen and (min-width: $iPadMiniPortrait) {
      width: 50%;
    }

    @media only screen and (min-width: $iPadMiniLandscape) {
      width: calc(((100% - (#{$gutter} * 11)) * (1/3) + #{$gutter} * 3));
    }

    @media only screen and (min-width: $Desktop) {
      width: calc(((100% - (#{$gutter} * 11)) * (1/4) + #{$gutter} * 3));
    }
  }
}

#home article > #section-3 #thumbprint {
  width: calc((100% - (#{$gutter} * 5)) * (4/6) + #{$gutter} * 3);
  margin: 24px auto;
  display: block;

  @media only screen and (min-width: $iPadMiniPortrait) {
    width: calc((100% - (#{$gutter} * 11)) * (2/6) + #{$gutter} * 3);
    margin-top: 64px;
  }

  @media only screen and (min-width: $iPadMiniLandscape) {
    width: calc((100% - (#{$gutter} * 11)) * (2/12) + #{$gutter} * 3);
  }
}

#home article > #section-4 #footprints {
  margin: 64px auto 24px;
  display: block;

  @media only screen and (min-width: $iPadMiniPortrait) {
    margin-top: 240px;
  }
}

#home article > #section-5 h2 {
  width: calc((100% - (#{$gutter} * 5)) * 0.5 + #{$gutter} * 3);
  position: absolute;
  top: 254px;
  right: 50%;
  transform: translate(50%, -50%);

  @media only screen and (min-width: $iPadMiniPortrait) {
    width: calc((100% - (#{$gutter} * 11)) * (1/2) + #{$gutter} * 7);
    top: 360px;
  }

  @media only screen and (min-width: $iPadMiniLandscape) {
    width: calc((100% - (#{$gutter} * 11)) * (1/3) + #{$gutter} * 3);
    top: 236px;
  }

  @media only screen and (min-width: $Desktop) {
    width: calc((100% - (#{$gutter} * 11)) * (1/5) + #{$gutter} * 3);
  }
}

#home article > #section-6 h2 {
  top: 230px;

  @media only screen and (min-width: $iPadMiniPortrait) {
    top: 310px;
  }

  @media only screen and (min-width: $iPadMiniLandscape) {
    top: 190px;
  }
}

#home article > #section-7 > img {
  width: auto;
  height: 100vh;
  right: 50%;
  transform: translateX(50%);

  @media only screen and (min-width: $iPadMiniLandscape) {
    width: auto;
    height: auto;
    transform: translateX(50%);
  }
}

#home article > #section-8 {
  img {
    width: 420px;
    height: 420px;
    top: 50%;
    right: 50%;
    transform: translate(50%, calc(-50% - 100px));

    @media only screen and (min-width: $iPadMiniPortrait) {
      width: 720px;
      height: 720px;
    }

    @media only screen and (min-width: $iPadMiniLandscape) {
      width: 820px;
      height: 820px;
    }
  }

  h2 {
    top: 50% !important;
    right: 50% !important;
    transform: translate(50%, -50%);
  }

  .button {
    top: 50% !important;
    transform: translate(50%, 42px);

    @media only screen and (min-width: $iPadMiniPortrait) {
      transform: translate(50%, 76px);
    }
  }
}

#home article > #section-9 > img {
  width: 100%;
  height: auto;
  top: 50%;
  right: 50%;
  transform: translate(50%, -50%);
}

#home article > #section-10 {
  > video {
    top: 50%;
    right: 50%;
    transform: translate(50%, calc(-100vh - 24px));

    @media only screen and (min-width: $iPadMiniLandscape) {
      transform: translate(50%, -50%);
    }
  }
}

#home article > #section-11 img {
  width: 100%;
  top: 50%;
  right: 50%;
  transform: translate(50%, -50%);

  @media only screen and (min-width: $iPadMiniPortrait) {
    width: 92%;
  }

  @media only screen and (min-width: $iPadMiniLandscape) {
    width: 38%;
  }
}

#home article > #section-12 {
  form {
    width: calc(100vw - 24px);
    position: absolute;
    top: 50%;
    right: 50%;
    transform: translate(50%, -50%);

    @media only screen and (min-width: $iPadMiniPortrait) {
      width: 50%;
    }

    h2 {
      text-align: left;
      position: static;
      transform: none;
    }

    input,
    textarea {
      width: -webkit-fill-available;
    }

    textarea {
      height: 80px;
    }
  }
}

#home article > footer {
  #paintbrush {
    width: 138px;
    height: auto;
    margin-top: 60px;
    margin-left: calc((100% - #{$gutter} * 5) / 6 + #{$gutter});

    @media only screen and (min-width: $iPadMiniPortrait) {
      width: 342px;
      height: auto;
      margin-left: calc((100% - #{$gutter} * 11) / 12 + #{$gutter});
    }

    @media only screen and (min-width: $iPadMiniLandscape) {
      width: 273px;
      margin-left: calc((100% - 20px*11)/12*4 + 20px*2);
    }

    @media only screen and (min-width: $Desktop) {
      width: 360px;
      height: auto;
      margin-left: calc(((100% - #{$gutter} * 11) / 12) * 3 + #{$gutter} * 2);
    }
  }

  h2 {
    width: calc(((100% - #{$gutter} * 5) / 6) * 4 + #{$gutter} * 3);
    margin: 0 auto;

    @media only screen and (min-width: $iPadMiniPortrait) {
      width: calc(((100% - #{$gutter} * 11) / 12) * 8 + #{$gutter} * 7);
    }

    @media only screen and (min-width: $iPadMiniLandscape) {
      width: calc(((100% - #{$gutter} * 11) / 12) * 4 + #{$gutter} * 3);
    }
  }

  #colophon {
    position: absolute;
    right: 50%;
    bottom: 12px;
    transform: translateX(50%);
  }
}

